--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "passport": "^0.4.1",
     "passport-http": "^0.3.0",
     "passport-jwt": "^4.0.0",
-    "password-hash": "^1.2.2"
+    "password-hash": "^1.2.2",
+    "validator-json": "^2.0.6"
   }
 }
